fix animation on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -395,6 +395,9 @@ $input-text-active: #BFD2FF;
 }
 
 @media (max-width: 800px) {
+    .webflow-style-input {
+        top: -10px!important; /* Important to override previous state */
+    }
     .area {
         scrollbar-color: unset;
         scrollbar-width: auto;
